redid projects page

--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -18,7 +18,8 @@ body{
 
 
 #content{
-	padding-top: 100px;
+	padding-top: 80px;
+	/*border: 1px solid black;*/
 	max-width: 1000px;
 	width: 100%;
 	margin: 0 auto;
