--- a/public/compass/sass/projects.scss
+++ b/public/compass/sass/projects.scss
@@ -3,13 +3,73 @@
 
 //============================= project things =============================
 
+.projectImgThumb{
+	*{
+		z-index: 0 !important;
+	}
+	display: inline-block;
+	width: 100%;
+	background-size: 1600px !important;
+	background-position: 100% 50% !important;
+	height: 276px;
+	position: relative;
+	transition: .4s;
+	cursor: pointer;
+	.overlay{
+		width: 100%;
+		height: 100%;
+		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+60,0+100,0.3+100 */
+		background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 60%,rgba(0,0,0,0.6) 100%); /* Chrome10+,Safari5.1+ */
+		background: radial-gradient(ellipse at center, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.8) 100%); /* W3C */
+		opacity: 0.8;
+		color: white;
+		transition: .4s;
+		transform-origin: 0% 0%;
+		text-align: center;
+		overflow: hidden;
+		h1{
+			padding-top: 70px;
+			font-size: 65px;
+			text-shadow: $shadow1;
+			transition: .5s;
+			margin-top: 0px;
+			margin-bottom: 0px;
+		}
+		p{
+			font-size: 18px;
+			border: 1px solid white;
+			display: inline-block;
+			padding: 20px;
+			background: rgba(0,0,0,.8);
+			box-shadow: $shadow1;
+		}
+	}
+	&:hover{
+		.overlay{
+			opacity: 0;
+		}
+		h1{
+			/*margin-top: -50px;*/
+			letter-spacing: 10px;
+			text-shadow: $shadow1;
+		}
+	};
+}
+
 
 .projectThumb{
-	display: flex;
-	flex-direction: row;
-	width: 100%;
+	@media (max-width: 1000px){
+		display: block !important;
+		margin: 0 auto;
+	}
+	@media (min-width: 1000px){
+		display: inline-block !important;
+		margin: 0 5px;
+	}
+	/*display: inline-block;*/
+	/*flex-direction: row;*/
+	width: 490px;
 	/*border: 2px solid darken($color1,15);*/
-	justify-content: space-between;
 	background-color: rgba(255,255,255,0.8);
 	.imgThumb {
 		width: 50%;
