--- a/public/views/projectDirective.html
+++ b/public/views/projectDirective.html
@@ -1,4 +1,4 @@
-<div class="projectThumb">
+<!-- <div class="projectThumb">
 	<h1 class="title name2">{{project.displayName}}</h1>
 	<div class="description">
 		<h1 class="title name1">{{project.displayName}}</h1>
@@ -8,4 +8,9 @@
 		</div>
 	</div>
 	<img class="imgThumb" ng-src="/images/{{project.name}}.png"></img>
+</div> -->
+
+<div class="projectImgThumb" style="background: url('/images/{{project.name}}.png')">
+	<div class="overlay"><h1>{{project.displayName}}</h1>
+	<p>{{project.description}}</p></div>
 </div>
