--- a/public/views/projectDirective.html
+++ b/public/views/projectDirective.html
@@ -12,5 +12,17 @@
 
 <div class="projectImgThumb" style="background: url('/images/{{project.name}}.png')">
 	<div class="overlay"><h1>{{project.displayName}}</h1>
-	<p>{{project.description}}</p></div>
+	<p>{{project.description}}</p>
+	</div>
+	<div class="links">
+		<div class="link">
+			<i class="fa fa-github"></i><span>Go To Github</span>
+		</div><!-- 
+		 --><div class="link">
+			<i class="fa fa-question-circle"></i><span>More Information</span>
+		</div><!-- 
+		 --><div class="link">
+			<i class="fa fa-external-link-square"></i><span>Go To Website</span><!--
+		--></div>
+	</div>	
 </div>
