--- a/public/compass/sass/about.scss
+++ b/public/compass/sass/about.scss
@@ -5,6 +5,7 @@
 	border: 4px solid $color1;
 	border-radius: 100%;
 	background: transparent;
+
 	width: 150px;
 	height: 150px;
 	img{
@@ -14,8 +15,9 @@
 		margin-left: 7%;
 		margin-right: 7%;
 		top: -5%;
+		transform: rotate(0deg);
 		&:hover{
-			transform: scale(1.2)
+			transform: rotate(360deg);
 		};
 	}
 	&:hover{
