--- a/public/compass/sass/projects.scss
+++ b/public/compass/sass/projects.scss
@@ -13,13 +13,14 @@
 	background-position: 100% 50% !important;
 	height: 276px;
 	position: relative;
-	transition: .4s;
 	cursor: pointer;
+	overflow: hidden;
 	.overlay{
 		width: 100%;
 		height: 100%;
+		transition: .4s;
 		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+60,0+100,0.3+100 */
-		background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 60%,rgba(0,0,0,0.6) 100%); /* Chrome10+,Safari5.1+ */
+		background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.8) 100%); /* Chrome10+,Safari5.1+ */
 		background: radial-gradient(ellipse at center, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.8) 100%); /* W3C */
 		opacity: 0.8;
 		color: white;
@@ -28,22 +29,25 @@
 		text-align: center;
 		overflow: hidden;
 		h1{
-			padding-top: 70px;
+			padding-top: 55px;
 			font-size: 65px;
 			text-shadow: $shadow1;
 			transition: .5s;
 			margin-top: 0px;
 			margin-bottom: 0px;
 		}
+	}
 		p{
 			font-size: 18px;
 			border: 1px solid white;
 			display: inline-block;
 			padding: 20px;
+			margin-top: 0px;
 			background: rgba(0,0,0,.8);
 			box-shadow: $shadow1;
+			margin: 20px;
+			transition: .5s;
 		}
-	}
 	&:hover{
 		.overlay{
 			opacity: 0;
@@ -53,7 +57,51 @@
 			letter-spacing: 10px;
 			text-shadow: $shadow1;
 		}
+		p{
+			margin-top: 50px;
+			opacity: 1;
+		}
+		.links{
+			opacity: 1;
+			top: -10px;
+		}
 	};
+	.links{
+		display: flex;
+		display: -webkit-flex;
+		position: absolute;
+		top: -100px;
+		width: 100%;
+		height: 90px;
+		font-size: 20px;
+		box-shadow: $shadow1;
+		transition: .5s;
+		.link{
+			position: relative;
+			padding-top: 20px;
+			box-sizing: border-box;
+			text-shadow: $shadow1;
+			width: 100%;
+			background: $color2;
+			border: 1px solid darken($color2,20);
+			text-align: center;
+			height: inherit;
+			color: white;
+			background: linear-gradient($color2, darken($color2,10));
+			i{	
+				font-size: 60px;
+				margin: 0 auto;
+			};
+			span{
+				position: relative;
+				bottom: 13px;
+				padding: 5px;
+			}
+			&:hover{
+				background: linear-gradient(lighten($color2,10), $color2);
+			};
+		}
+	}
 }
 
 
