--- a/public/compass/stylesheets/about.css
+++ b/public/compass/stylesheets/about.css
@@ -2,9 +2,9 @@
 /*$color1: #448;*/
 /* line 4, ../sass/about.scss */
 .nick-face { border: 4px solid #4488cc; border-radius: 100%; background: transparent; width: 150px; height: 150px; }
-/* line 10, ../sass/about.scss */
-.nick-face img { position: relative; transition: .5s; width: 86%; margin-left: 7%; margin-right: 7%; top: -5%; }
-/* line 17, ../sass/about.scss */
-.nick-face img:hover { transform: scale(1.2); }
-/* line 21, ../sass/about.scss */
+/* line 11, ../sass/about.scss */
+.nick-face img { position: relative; transition: .5s; width: 86%; margin-left: 7%; margin-right: 7%; top: -5%; transform: rotate(0deg); }
+/* line 19, ../sass/about.scss */
+.nick-face img:hover { transform: rotate(360deg); }
+/* line 23, ../sass/about.scss */
 .nick-face:hover { border: 4px solid #e69500; }
