--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -85,30 +85,34 @@ body { margin: 0; font-family: 'Roboto', sans-serif; font-size: 10pt; /*backgrou
 #admin form button { float: right; }
 /* line 38, ../sass/admin.scss */
 #admin #togglePreview * { cursor: pointer; display: inline; }
-
-/* line 44, ../sass/admin.scss */
-.blogPost { background: white; padding: 15px; }
+/* line 42, ../sass/admin.scss */
+#admin .fa { display: inline; float: right; color: lightgrey; }
 /* line 47, ../sass/admin.scss */
+#admin .fa.fa-check { color: red; margin-right: 5px; }
+
+/* line 53, ../sass/admin.scss */
+.blogPost { background: white; padding: 15px; }
+/* line 56, ../sass/admin.scss */
 .blogPost, .blogPost * { font-size: 12pt; }
-/* line 50, ../sass/admin.scss */
+/* line 59, ../sass/admin.scss */
 .blogPost .preview { font-weight: lighter; font-style: italic; display: inline; color: #aaa; }
 
-/* line 60, ../sass/admin.scss */
-.delete-button-container { display: inline-block; box-sizing: content-box; display: inline-block; border: 2px solid #990000; width: 150px; height: 20px; overflow: hidden; cursor: pointer; }
 /* line 69, ../sass/admin.scss */
+.delete-button-container { display: inline-block; box-sizing: content-box; display: inline-block; border: 2px solid #990000; width: 150px; height: 20px; overflow: hidden; cursor: pointer; }
+/* line 78, ../sass/admin.scss */
 .delete-button-container * { font-size: 11pt; }
 
-/* line 74, ../sass/admin.scss */
+/* line 83, ../sass/admin.scss */
 .deleter { width: inherit; height: inherit; background: #cc0000; color: white; padding: 1px; }
-/* line 80, ../sass/admin.scss */
+/* line 89, ../sass/admin.scss */
 .deleter:hover { background: red; }
 
-/* line 84, ../sass/admin.scss */
+/* line 93, ../sass/admin.scss */
 .confirmer { display: inline; color: #888; padding: 1px; }
 
-/* line 89, ../sass/admin.scss */
+/* line 98, ../sass/admin.scss */
 .confirm-button { width: auto; margin-left: 1px; float: right; display: inline-block; padding: 0px 10px; color: white; background-color: #888; }
-/* line 97, ../sass/admin.scss */
+/* line 106, ../sass/admin.scss */
 .confirm-button:hover { background-color: #AAA; }
 
 /* line 6, ../sass/blog.scss */
