--- a/public/views/admin.all-posts.html
+++ b/public/views/admin.all-posts.html
@@ -1,5 +1,5 @@
 <div class="blogPost" ng-repeat = "post in posts">
-	{{post.title}}: 
+	<span ui-sref="blogPost({webTitle: post.webTitle})">{{post.title}}:</span> 
 	<span class="preview">{{post.text.slice(0,100)}}</span>
 	<span class="preview" ng-if='post.text.length > 100'>…</span>
   <span class="fa fa-trash" ng-click="askDelete(post)" ng-hide="post.confirmDelete"></span>
