--- a/public/views/login.state.html
+++ b/public/views/login.state.html
@@ -1,6 +1,6 @@
 secret admin password?
 <form name ="logInForm" ng-submit="logIn()">
   
-  <input ng-model="login.password"></input>
+  <input ng-model="login.password" type="password"></input>
 
 </form>
