--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -26,6 +26,19 @@ body{
 }
 
 
+footer{
+	position: fixed;
+	bottom: 0px;
+	height: 40px;
+	margin-top: 100px;
+	background: #AAA;
+	display: inline-block;
+	width: 100%;
+	color: white;
+	text-align: center;
+	padding: 10px;
+}
+
 
 
 /*@import './responsive.scss';*/
