--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -7,6 +7,9 @@ body { margin: 0; font-family: 'Roboto', sans-serif; font-size: 10pt; /*backgrou
 /* line 20, ../sass/screen.scss */
 #content { padding-top: 80px; /*border: 1px solid black;*/ max-width: 1000px; width: 100%; margin: 0 auto; }
 
+/* line 29, ../sass/screen.scss */
+footer { position: fixed; bottom: 0px; height: 40px; margin-top: 100px; background: #AAA; display: inline-block; width: 100%; color: white; text-align: center; padding: 10px; }
+
 /*@import './responsive.scss';*/
 /* line 6, ../sass/projects.scss */
 .projectImgThumb { display: inline-block; width: 100%; background-size: 1600px !important; background-position: 100% 50% !important; height: 276px; position: relative; cursor: pointer; overflow: hidden; }
